fix(message-list): collapsed message participants no longer looks broken. fixes T3377.
Summary: moved non-view logic outside of the render function, which also helped for testing purposes

Test Plan: added a test, but this also leaves the window open for testing the other use cases beyond T3377. not sure whether we should add tests for this patch or for another ticket.

Reviewers: evan

Reviewed By: evan

Maniphest Tasks: T3377

Differential Revision: https://phab.nylas.com/D1916

--- a/internal_packages/message-list/stylesheets/message-list.less
+++ b/internal_packages/message-list/stylesheets/message-list.less
@@ -466,7 +466,7 @@
     color: @text-color-very-subtle;
   }
   .to-label, .cc-label, .bcc-label, .subject-label { margin-left: @spacing-standard; }
-  .to-contact, .cc-contact, .to-everyone {
+  .to-contact, .cc-contact, .bcc-contact, .to-everyone {
     color: @text-color-very-subtle;
   }
 
